--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
 }
 header {
     background-color: #1F2937;
-    padding:  10px 20px 10px 20px;
+    padding:  10px 150px;
 
     display: flex;
     justify-content: space-between;
@@ -19,6 +19,8 @@ header {
     font-size: 24px;
     font-weight: bolder;
     color : #F9FAF8;
+
+    flex-shrink: 0;
 }
 
 ul {
@@ -65,7 +67,7 @@ a {
     text-align: center;
     justify-content: center;
 }
-.signup {
+.hero .left .signup {
     padding: 10px 30px;
     border-radius: 10px;
     border-style: none;
@@ -125,4 +127,43 @@ a {
     text-align: end;
 
     font-weight: bolder;
+}
+
+.call {
+    padding: 100px;
+}
+.call .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap : 20px;
+
+    margin: 0 auto;
+    background-color: #3882f6;
+    border-radius: 5px;
+    padding: 15px 40px;
+}
+
+.call .left {
+    flex: 1;
+}
+.call .title {
+    margin-bottom: 10px;
+    color: #F9FAF8;
+    font-weight: bold;
+}
+.call .text{
+    margin-top: 10px;
+    color: #e5e7eb;
+}
+.call .signup{
+    padding: 10px 50px;
+    border-radius: 10px;
+    border-style: solid;
+    border-color: #F9FAF8;
+
+    font-size: 15px;
+    font-weight: bold;
+    color: #e5e7eb;
+    background-color: #3882f6;
 }
